# OS_Colloquium_1

./: CMakeLists.txt  theory.txt
dupl_erase/: CMakeLists.txt  dupl_erase.cpp  dupl_erase.h  dupl_erase_main.cpp
factorial/: CMakeLists.txt  factorial.cpp  factorial.h  factorial_main.cpp
list_reverse/: CMakeLists.txt  list_reverse.h  list_reverse_main.cpp
